finish resume (no reponsive design option)

--- a/siteconfig.json
+++ b/siteconfig.json
@@ -1,5 +1,8 @@
 {
   "title": "Nicole J. Mayes",
+  "role": "International Relations Coordinator",
+  "email":"nicole@nmayes.com",
+  "phone":"(949) 313-8865",
   "description": "This is my personal webpage",
   "profile": [
     {
